GNOME Bugzilla – Bug 644478
Single click is set by default but does not work
Last modified: 2011-04-25 17:38:00 UTC
In latest GNOME 3 build (Fallback mode) single-click to open folder is set in Nautilus but does not work. To enable single click, you have to switch to dual-click and back to single-click afterwards
I can't reproduce this bug here. Are you using jhbuild to build the session components or are you using a bleeding edge distribution? Do you see any warnings when trying to run nautilus from the terminal?
On the Ubuntu PPA build of Nautilus, the default always goes back to single-click but, indeed, you actually have to double-click. Really happy to hear that single-click is the default (after all, Nautilus is the only remaining place where you have to double-click)
No, we did not switch to single-click by default. There was a bug in the code that links those radiobuttons to GSettings, so the actual setting was not picked up when opening the properties window. I fixed this in master, thanks for the report.
*** Bug 648585 has been marked as a duplicate of this bug. ***