preferences: use g_settings_bind_with_mapping() for radiobuttons

This also fixes radiobuttons preferences not being applied when opening
the properties dialog.

https://bugzilla.gnome.org/show_bug.cgi?id=644478